# DynamicSNN

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.cpp  config.h  core_types.h  datalogger.cpp  datalogger.h  experiment.cpp  experiment.h  get_json.sh  gif.py  learning_rules.cpp  learning_rules.h  main.cpp  network.cpp  network.h  neuron.cpp  neuron.h  synapse.cpp  synapse.h  visualise.py
